<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_ros2_canopen_bridge</name>
  <version>0.0.1</version>
  <description>Test of ROS2 bridge node which sends and receives PDOs on a CAN interface</description>
  <maintainer email="enrico.piazza@polimi.it">enrico</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_canopen</depend>
  <depend>lely_core_libraries</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
